# external-offers

./: .build.sh  .coverage  .envrc.example  .gitignore  Dockerfile  README.md  app.toml  pyproject.toml  setup.cfg  tox.ini
contrib/postgresql/: schema.sql
contrib/postgresql/migrations/: 0001-initial.sql  0002-add-parsed-offers.sql  0003-user-segment-remove-not-null.sql  0004-add-client-status.sql  (+65 more)
src/external_offers/: __init__.py  cli.py
tests/: conftest.py  pytest.ini  settings.py
tests/entities/: test_parsed_offers.py
tests/handlers/: test_get_offer_card.py  test_offers_list.py  test_teams.py  test_update_client_phone.py
tests/helpers/: test_graphite.py  test_next_call.py  test_paginator.py  test_time.py  test_user_ids.py
tests/queue/: test_consumers.py  test_helpers.py  test_process_announcement_consumer.py
tests/services/: test_create_account_statuses.py  test_create_phones_statuses.py  test_create_test_objects.py  test_get_client_accounts_py_phone_number.py  test_get_districts.py  test_offers_creator.py  test_operators.py  test_prioritization.py  test_return_client_by_phone.py  test_save_offer.py  test_send_clients_to_kafka_cron.py  test_send_event_logs_to_kafka_cron.py  test_send_latest_timestamp_to_graphite.py  test_send_offers_and_clients_to_grafana.py  test_send_offers_for_call_to_kafka_cron.py  test_send_operators_to_kafka_cron.py  test_send_parsed_offer.py  test_send_parsed_offers_to_kafka_cron.py  test_send_teams_to_kafka_cron.py  test_teams.py  test_update_client_comment.py  test_update_client_real_info.py
tests/utils/: test_iter_utils.py  test_jinja_filters.py  test_next_call_utils.py
tests_functional/: conftest.py  pytest.ini  test_2stage_flow_cases.py  test_admin.py  test_ping.py  test_qa_cases.py  test_team_cases.py  test_team_priorities.py  test_unactivated_objects_deletion.py  test_unactivation_cases.py
tests_functional/cron/: test_clear_outdated_offers.py  test_create_client_account_statuses.py  test_create_offers_for_call.py  test_create_offers_for_call_prioritize.py  test_create_offers_for_call_prioritize_homeowners.py  test_create_offers_for_call_prioritize_smb.py  test_create_offers_for_call_prioritize_teams.py  test_create_offers_for_call_prioritize_unactivated_clients.py  test_create_offers_for_prioritize_unactivated_clients.py  test_create_phones_statuses.py  test_save_phone_numbers.py  test_send_clients_to_kafka_cron.py  test_send_event_logs_to_kafka_cron.py  test_send_offers_for_call_to_kafka_cron.py  test_send_operators_to_kafka_cron.py  test_send_parsed_offers_to_kafka_cron.py  test_send_teams_to_kafka_cron.py  test_sync_with_grafana.py
tests_functional/manage/: test_sync_event_log.py
tests_functional/queue/: test_process_announcement_consumer.py  test_save_external_offers.py  test_send_external_offers.py
tests_functional/web/: test_admin.py  test_calls_history.py  test_calls_history_html.py  test_create_test_objects.py  test_main_case.py  test_offer_card.py  test_offers_list.py  test_offers_list_html.py  test_offers_list_kafka.py  test_operators.py  test_return_client_by_phone.py  test_save_offer.py  test_save_offer_caching.py  test_save_offer_kafka.py  test_save_offer_locking.py  test_save_offer_segments.py  test_teams.py  test_test_objects.py  test_update_client_additional_emails.py  test_update_client_additional_numbers.py  test_update_client_comment.py  test_update_client_phone.py  test_update_client_real_info.py  test_update_client_reason_of_decline.py  test_update_clients_operator.py  test_update_offer_category.py  test_update_offer_comment.py  test_update_priorities.py
(+378 files in other folders)
