[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "external-offers"
version = "0.1.0"
authors = ["Cian Team <python@cian.ru>"]
description = "My short description"
readme = "README.md"

[tool.poetry.scripts]
external-offers = "external_offers.cli:cli"

[[tool.poetry.source]]
name = "cian"
url = "https://nexus.cian.tech/repository/cian/simple/"
default = true

[tool.poetry.dependencies]
cian-core = {version = "^1.20", extras = ['postgres', 'kafka', 'graphite', 'cache']}
cian-kafka = "^1.2"
cian-entities = "^1.8"
cian-enum = "^1.1"
cian-http = "^0.21"
cian-schemas = "^2.8"
cian-web = "^2.2"
click = "^7.0"
python = "^3.9"
simple-settings = "^0.19"
tornado = "^6.0"
jinja2 = "^2.11.2"
asyncpgsa = "^0.26"
cian-cache = "^1.4.0"
sqlalchemy = "<1.4"
types-pytz = "^2021.1.0"

[tool.poetry.dev-dependencies]
cian-functional-test-utils = {version = "*", extras = ["python", "postgres", "kafka", "rabbitmq", "cache"]}
cian-test-utils = "^1.2"
pytest = "*"
pytest-mock = "*"
pytest-tornado = "*"
freezegun = "^1.0.0"
cian-tools = ">=0.4"
